cmake_minimum_required(VERSION 3.17)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 main.cpp cmake-build-debug/Polynomial.h cmake-build-debug/Constructors.cpp cmake-build-debug/Assignment.cpp cmake-build-debug/Substruction.cpp cmake-build-debug/Init.cpp cmake-build-debug/Division.cpp cmake-build-debug/Equality.cpp)