cmake_minimum_required(VERSION 3.17)
project(untitled2)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled2 main.cpp Polynomial.h Constructors.cpp Assignment.cpp Substruction.cpp Init.cpp Division.cpp Output.cpp Refactor.cpp Search.cpp Addition.cpp Multiplication.cpp GetCoef.cpp GetPolynomialSize.cpp)